--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <body>
 
     <h1>Hello world!</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae deleniti fugit laborum omnis ipsam, deserunt magni atque ut qui ratione! Eligendi natus perferendis ut beatae vero asperiores voluptates excepturi.</p>
 
 
     <script src="app.js"></script>
