--- a/index.html
+++ b/index.html
@@ -1,21 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <link rel="stylesheet" href="css/style.css" />
+  </head>
 
-<body>
+  <body>
+    <div class="wrapper">
+      <button class="btn">Click</button>
+      <button class="btn2">Click</button>
+    </div>
 
     <h1>Hello world!</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae deleniti fugit laborum omnis ipsam, deserunt magni atque ut qui ratione! Eligendi natus perferendis ut beatae vero asperiores voluptates excepturi.</p>
+    <p>
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Totam beatae
+      deleniti fugit laborum omnis ipsam, deserunt magni atque ut qui ratione!
+      Eligendi natus perferendis ut beatae vero asperiores voluptates excepturi.
+    </p>
 
+    <script>
+      const button = document.querySelector(".btn");
+      const button2 = document.querySelector(".btn2");
+
+      button.addEventListener("click", Clicker);
+      button2.addEventListener("click", Clicker);
+
+      function Clicker() {
+        console.log("Click-2");
+      }
+
+
+
+      
+    </script>
 
     <script src="js/app.js"></script>
-</body>
-
+  </body>
 </html>
